Fix iOS layout issues (#74)
* Move usage of FullViewport into Desktop

* Fix iOS layout issues

* Remove comma

--- a/src/components/FullViewport/FullViewport.module.css
+++ b/src/components/FullViewport/FullViewport.module.css
@@ -20,10 +20,16 @@
 }
 
 .full-viewport {
-  position: absolute;
-  top: 0px;
+  /* IMPORTANT: Bottom fixed seems to fix iOS Safari issues when switching
+     between landscape and portrait orientations, including an issue where
+     the opening the software keyboard in landscape mode, then closing it,
+     and the app would not take up the full amount of screen space.
+  */
+  position: fixed;
+  bottom: 0px;
+
   left: 0px;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
